feat: Display erro

--- a/packages/cozy-harvest-lib/src/locales/en.json
+++ b/packages/cozy-harvest-lib/src/locales/en.json
@@ -248,6 +248,13 @@
         "button": "Close"
       }
     },
+    "accounts": {
+      "error": {
+        "title": "Error",
+        "description": "Unable to retrieve your account(s)",
+        "retry": "Retry"
+      }
+    },
     "tabs": {
       "data": "Data",
       "configuration": "Configuration"
